<resources>
    <string name="app_name">EitherOr</string>

    <!--  BottomNavigationView -->
    <string name="title_home">홈</string>
    <string name="title_add_quiz">질문 추가</string>
    <string name="title_like">찜 목록</string>

    <!--  HomeFragment  -->
    <string name="home_category">카테고리별</string>
    <string name="home_random">랜덤</string>
    <string name="home_popular">인기</string>
    <string name="home_recent">최신</string>
    <string name="home_top_text">홈</string>

    <!--  QuizListFragment  -->
    <string name="ql_top_text">목록</string>
    <string name="ql_quiz_count_text">%d 건의 Either OR</string>

    <!--  item_quiz  -->
    <string name="item_quiz_title">퀴즈 이름</string>
    <string name="item_quiz_heart_text">%d</string>

    <!--  item_like  -->
    <string name="item_like_title">퀴즈 이름</string>
    <string name="item_like_heart_text">%d</string>

    <!--  category  -->
    <string name="category_love">연인</string>
    <string name="category_daily">일상</string>
    <string name="category_fun">재미</string>
    <string name="category_food">음식</string>
    <string name="category_taste">취향</string>
    <string name="category_if">만약</string>
    <string name="category_job">직장</string>
    <string name="category_caution">비위조심</string>
    <string name="category_life">인생</string>

    <!--  like  -->
    <string name="like_top_text">마이픽</string>

    <!--  quiz  -->
    <string name="quiz_title">Loading…</string>
    <string name="quiz_either_or">Either Or</string>
    <string name="quiz_choice1_dummy_text">choice 1</string>
    <string name="quiz_choice2_dummy_text">choice 2</string>
    <string name="quiz_chatgpt">chatGPT 응답 불러오기</string>
    <string name="quiz_chatgpt_answer">Loading…</string>
    <string name="quiz_choice1_percentage">%1$s\n %2$d 표</string>
    <string name="quiz_choice2_percentage">%1$s\n %2$d 표</string>
    <string name="quiz_close">닫기</string>

    <!--  addQuiz  -->
    <string name="add_quiz_title">퀴즈 제목을 입력하세요</string>
    <string name="add_quiz_choice1">선택지 1</string>
    <string name="add_quiz_choice2">선택지 2</string>
    <string name="add_quiz_confirm">확인</string>
    <string name="add_quiz_logo">카테고리</string>
    <string name="add_quiz_category">카테고리: </string>
    <string name="dialog_title">비밀번호</string>
    <string name="dialog_content">비밀번호를 입력하세요(숫자 4자리)</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_confirm">확인</string>
</resources>