<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/add_quiz_category_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/add_quiz_category_fun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/category_fun"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/add_quiz_category_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/category_daily"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/add_quiz_category_love"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/category_love"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/add_quiz_category_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/category_food"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/add_quiz_category_taste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/category_taste"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/add_quiz_category_if"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/category_if"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/add_quiz_category_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/category_job"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/add_quiz_category_caution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/category_caution"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/add_quiz_category_life"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/category_life"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_quiz_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/aquamarine"
            android:text="@string/add_quiz_confirm"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
