<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/f_category_fun"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/category_fun"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:backgroundTint="@color/category_fun"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toStartOf="@id/f_category_daily"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/f_category_daily"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/category_daily"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:backgroundTint="@color/category_daily"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/f_category_fun"
        app:layout_constraintTop_toTopOf="@id/f_category_fun" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/f_category_love"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/category_love"
        android:text="@string/category_love"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="@id/f_category_fun"
        app:layout_constraintTop_toBottomOf="@id/f_category_fun" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/f_category_food"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/category_food"
        android:text="@string/category_food"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/f_category_love"
        app:layout_constraintTop_toTopOf="@id/f_category_love" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/f_category_taste"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/category_taste"
        android:text="@string/category_taste"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="@id/f_category_love"
        app:layout_constraintTop_toBottomOf="@id/f_category_love" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/f_category_if"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/category_if"
        android:text="@string/category_if"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/f_category_taste"
        app:layout_constraintTop_toTopOf="@id/f_category_taste" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/f_category_job"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/category_job"
        android:text="@string/category_job"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="@id/f_category_taste"
        app:layout_constraintTop_toBottomOf="@id/f_category_taste" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/f_category_caution"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/category_caution"
        android:text="@string/category_caution"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/f_category_job"
        app:layout_constraintTop_toTopOf="@id/f_category_job" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/f_category_life"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/category_life"
        android:text="@string/category_life"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="@id/f_category_job"
        app:layout_constraintTop_toBottomOf="@id/f_category_job" />


</androidx.constraintlayout.widget.ConstraintLayout>