<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/f_home_top_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_top_text"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/f_home_random_cv"
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/scuba_blue"
        android:elevation="20dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/f_home_recent_cv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/f_home_category_cv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:id="@+id/f_home_random_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home_random"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/f_home_category_cv"
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/aquamarine"
        android:elevation="0dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/f_home_popular_cv"
        app:layout_constraintEnd_toStartOf="@+id/f_home_random_cv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:id="@+id/f_home_category_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home_category"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/f_home_popular_cv"
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/lucite_green"
        android:elevation="0dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/f_home_recent_cv"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_home_category_cv">


        <TextView
            android:id="@+id/f_home_popular_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home_popular"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/f_home_recent_cv"
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/classic_blue"
        android:elevation="0dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/f_home_popular_cv"
        app:layout_constraintTop_toBottomOf="@+id/f_home_random_cv">

        <TextView
            android:id="@+id/f_home_recent_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home_recent"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>