<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.QuizActivity">

    <TextView
        android:id="@+id/a_quiz_title_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/scuba_blue"
        android:gravity="center"
        android:text="@string/quiz_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/white"
        app:layout_constraintDimensionRatio="H, 2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/a_quiz_back_btn_iv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/a_quiz_view"
        android:layout_width="1000dp"
        android:layout_height="5dp"
        android:background="@color/view_gray"
        android:rotation="45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/a_quiz_title_tv" />

    <TextView
        android:id="@+id/a_quiz_choice1_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLength="100"
        android:text="@string/quiz_choice_dummy_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/a_quiz_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/a_quiz_logo_tv"
        app:layout_constraintTop_toBottomOf="@id/a_quiz_logo_tv" />

    <TextView
        android:id="@+id/a_quiz_choice2_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLength="100"
        android:text="@string/quiz_choice_dummy_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/a_quiz_chat_gpt_response_btn"
        app:layout_constraintEnd_toEndOf="@id/a_quiz_logo_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/a_quiz_view" />

    <TextView
        android:id="@+id/a_quiz_logo_tv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/quiz_oval_text"
        android:gravity="center"
        android:text="@string/quiz_either_or"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@id/a_quiz_title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/a_quiz_title_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/a_quiz_chat_gpt_response_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:backgroundTint="@color/aquamarine"
        android:text="@string/quiz_chatgpt"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>